Remove unnecessary parameter and handle tie cases correctly